force-app/main/default/objects/Quality_Gate_Rule_Condition__c/fields/AcceptanceCriteria__c.field-meta.xml
<CustomField>
    <fullName>AcceptanceCriteria__c</fullName>
    <inlineHelpText>Requirements and thresholds that must be met to pass this quality gate successfully</inlineHelpText>
    <label>Acceptance Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>