force-app/main/default/objects/Quality_Gate_Rule_Condition__c/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <description>Formula field to display parent Quality Gate Rule&apos;s Copado Actions in related lists.</description>
    <formula>Quality_Gate_Rule__r.ActionsList__c</formula>
    <label>Copado Actions</label>
    <type>Text</type>
</CustomField>