force-app/main/default/objects/Quality_Gate_Rule_Condition__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Environment where this Quality Gate Condition will be evaluated. If no Pipeline is defined, this Condition will apply to all Pipelines where this Environment is connected to.</inlineHelpText>
    <label>Environment</label>
    <referenceTo>Environment__c</referenceTo>
    <relationshipLabel>Quality Gate Rule Conditions</relationshipLabel>
    <relationshipName>Quality_Gate_Rule_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>