force-app/main/default/objects/Quality_Gate_Rule_Condition__c/fields/ExecutionSequence__c.field-meta.xml
<CustomField>
    <fullName>ExecutionSequence__c</fullName>
    <description>Formula field to display parent Quality Gate Rule&apos;s Execution Sequence in related lists</description>
    <formula>TEXT(Quality_Gate_Rule__r.Execution_sequence__c)</formula>
    <label>Execution Sequence</label>
    <type>Text</type>
</CustomField>