force-app/main/default/objects/Quality_Gate_Rule_Condition__c/fields/Extension_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Extension_Configuration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Extension Configuration</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Make sure the selected Extension Configuration is valid and active.</errorMessage>
        <filterItems>
            <field>ExtensionConfiguration__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ExtensionConfiguration__c</referenceTo>
    <relationshipLabel>Quality Gate Rule Conditions</relationshipLabel>
    <relationshipName>Quality_Gate_Rule_Conditions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>