force-app/main/default/objects/Quality_Gate_Rule_Condition__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Pipeline where this Quality Gate Condition will be evaluated.</inlineHelpText>
    <label>Pipeline</label>
    <referenceTo>Deployment_Flow__c</referenceTo>
    <relationshipLabel>Quality Gate Rule Conditions</relationshipLabel>
    <relationshipName>Quality_Gate_Rule_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>