force-app/main/default/objects/Quality_Gate_Rule_Condition__c/fields/Quality_Gate_Rule__c.field-meta.xml
<CustomField>
    <fullName>Quality_Gate_Rule__c</fullName>
    <label>Quality Gate Rule</label>
    <referenceTo>Quality_Gate_Rule__c</referenceTo>
    <relationshipLabel>Quality Gate Rule Conditions</relationshipLabel>
    <relationshipName>Quality_Gate_Rule_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>