force-app/main/default/objects/Quality_Gate_Rule_Condition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Formula field to display parent Quality Gate Rule&apos;s Status in related lists.</description>
    <formula>TEXT(Quality_Gate_Rule__r.Status__c)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>