force-app/main/default/objects/Quality_Gate_Rule_Condition__c/fields/Tests_From__c.field-meta.xml
<CustomField>
    <fullName>Tests_From__c</fullName>
    <inlineHelpText>Select from where the tests to be executed as part of the Quality Gate are retrieved.</inlineHelpText>
    <label>Tests From</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Story</fullName>
                <default>true</default>
                <label>User Story</label>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>