force-app/main/default/objects/Quality_Gate_Rule_Condition__c/fields/Tool__c.field-meta.xml
<CustomField>
    <fullName>Tool__c</fullName>
    <description>Formula field to display parent Quality Gate Rule&apos;s Tool in related lists.</description>
    <formula>TEXT(Quality_Gate_Rule__r.Tool__c)</formula>
    <label>Tool</label>
    <type>Text</type>
</CustomField>