force-app/main/default/objects/Quality_Gate_Rule_Condition__c/validationRules/ConsistentPlatform.validationRule-meta.xml
<ValidationRule>
    <fullName>ConsistentPlatform</fullName>
    <active>true</active>
    <description>Validates the selected platform and the platform of the environment/pipeline matches.</description>
    <errorConditionFormula>OR(
  (
    AND(
      NOT(ISBLANK(TEXT(Platform__c))), 
      NOT(ISBLANK(Pipeline__c)), 
      TEXT(Platform__c) != TEXT(Pipeline__r.Platform__c)
    )
  ), 
  (
    AND(
      NOT(ISBLANK(TEXT(Platform__c))), 
      NOT(ISBLANK(Environment__c)), 
      TEXT(Platform__c) != TEXT(Environment__r.Platform__c)
    )
  ), 
  (
    AND(
      NOT(ISBLANK(Environment__c)), 
      NOT(ISBLANK(Pipeline__c)), 
      TEXT(Environment__r.Platform__c) != TEXT(Pipeline__r.Platform__c)
    )
  )
)</errorConditionFormula>
    <errorMessage>The selected platform does not match the chosen pipeline or environment platform value.</errorMessage>
</ValidationRule>